2016-03-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_abort_empty_line): Check if 
	'spaces_before_argument' extra value needs to be removed from 
	parent as well as from current element.

2016-03-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (parse_texi): Always set parent on 
	element of type 'empty_spaces_before_argument'.

2016-03-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (%keep_line_nr_brace_commands): Keep line 
	number for all brace commands.
	(_parse_texi) <open brace separator>: Don't save line number 
	here.

2016-03-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <commands with commands as 
	arguments>: Don't remove 'contents'.

2016-03-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (%keep_line_nr_brace_commands): Add 
	accent commands, so that the line number always recorded for 
	accent commands (previously only done if the accent command took 
	an argument in braces).
	(_parse_texi) <brace commands>: Never define 'contents' for an 
	accent command.

2016-03-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm: Add line
	"use Texinfo::Convert::NodeNameNormalization" instead of relying 
	on module being pulled in indirectly.

2016-03-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* parsetexi, tp/parsetexi: Move subdirectory in preparation for 
	integration into texi2any as an XS module.

2016-03-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Report.pm (_subsititue, _substitute_element_array): 
	New functions.
	(gdt): Only pass @value's to parser if they are simple strings.
	before running parser.  This will be necessary when we use the
	XS parser, which we can't pass complex Perl data structures to.
	Call _substitute afterwards on the resulting tree to fill in 
	@value's.
	* tp/Texinfo/Parser.pm (_parse_texi) <undefined @value>: Call 